Ejercicio Logeo Terminado

--- a/ejercicioLogeo/envio_js_peticion.html
+++ b/ejercicioLogeo/envio_js_peticion.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="http://localhost:4567/saludar" method="POST">
-        <input type="text" name="nombre" id="" placeholder="Ingresa tu nuevo usuario">
-        <input type="password" name="password" id="" placeholder="Escribe tu nuevo password">
-        <input type="submit" value="registrar">
+    <h1>Formulario de inicio de sesión</h1>
+    <form action="http://localhost:4567/saludar" method="post">
+        <input type="text" name="nombre" id="" placeholder="Escribe tu login">
+        <input type="password" name="password" id="" placeholder="Escribe tu password">
+        <input type="submit" value="Enviar">
     </form>
 </body>
 </html>
