Ejercicio Logeo Terminado

--- a/ejercicioLogeo/envio_js_registro.html
+++ b/ejercicioLogeo/envio_js_registro.html
@@ -45,7 +45,11 @@
 							
 						</tbody>
 					</table>
+					<!-- Después de hacer una inserción es necesario hacer clic en este botón para que el usuario
+					agregado se muestre en la tabla, ya que no se actualiza de manera automática -->
 					<button id="mostrar-tabla">Mostrar Tabla</button>
+					<p><b>Después de añadir un usuario es necesario pulsar nuevamente este botón para reflejar el cambio, 
+						ya que los cambios no se actualizan de manera automática.</b></p>
 				</div>
 			</div>
 		</div>
