--- a/bd-spark/index.html
+++ b/bd-spark/index.html
@@ -10,10 +10,13 @@
 
 <body>
     <form action="">
+        <input type="text" name="" id="id" placeholder="id">
         <input type="text" name="" id="email" placeholder="email">
         <input type="password" name="" id="password" placeholder="password">
         <button type="button" id="btnRegistrar">Registrar</button>
         <button type="button" id="btnLista">Lista</button>
+        <button type="button" id="btnEditar">Editar</button>
+        <button type="button" id="btnEliminar">Eliminar</button>
     </form>
 
     <span>
